Fix issues with gcc
-Fixed inclusion of filesystem header for old version of gcc

cmake

Add executable

ck

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.25)
 project(NBP_jupyter CXX)
 set(CMAKE_CXX_STANDARD 17)
 
+link_libraries(stdc++fs)
+
 add_executable(NBP_jupyter
         simulateFER.cpp
         stabilizerCodes.cpp
